<resources>
    <string name="app_name">FootBall</string>
    <!-- Page d'acceuil -->
    <string name="home_page_title">Match</string>
    <string name="Resultats">Vos Resultats</string>

    <!-- Page match -->
    <string name="equipe">Match</string>

    <!-- Page statistique -->
    <string name="sore_de_matchs">Stats</string>

    <!-- Page score -->
    <string name="buts">Match_score</string>

    <!-- Page ligues -->
    <string name="championnant">Ligues</string>

    <!-- Page settings -->
    <string name="title_activity_settings">FootBall</string>
    <string name="nom">Votre nom</string>
    <string name="valider">Valider</string>
    <string name="annuler">Annuler</string>
    <string name="nom1">Nom ?</string>
    <string name="aAvion">Activation du mode avion</string>
    <string name="mAvion">Mode avion</string>
    <string name="competition">Compétition</string>
    <string name="choix">Veuillez choisir une compétition</string>
    <string name="choixS">Cliquez pour choisir un compétition</string>
    <string-array name="competitionList">
        <item>Premier League</item>
        <item>La Liga</item>
        <item>Serie A</item>
        <item>Bundesliga</item>
        <item>Ligue 1</item>
        <item>Champions League</item>
    </string-array>


</resources>